<resources>
    <string name="app_name">iPayment</string>
    <string name="remove_vector_path">M44.373,7.603c-10.137,-10.137 -26.632,-10.138 -36.77,0c-10.138,10.138 -10.137,26.632 0,36.77s26.632,10.138 36.77,0C54.51,34.235 54.51,17.74 44.373,7.603zM36.241,36.241c-0.781,0.781 -2.047,0.781 -2.828,0l-7.425,-7.425l-7.778,7.778c-0.781,0.781 -2.047,0.781 -2.828,0c-0.781,-0.781 -0.781,-2.047 0,-2.828l7.778,-7.778l-7.425,-7.425c-0.781,-0.781 -0.781,-2.048 0,-2.828c0.781,-0.781 2.047,-0.781 2.828,0l7.425,7.425l7.071,-7.071c0.781,-0.781 2.047,-0.781 2.828,0c0.781,0.781 0.781,2.047 0,2.828l-7.071,7.071l7.425,7.425C37.022,34.194 37.022,35.46 36.241,36.241z</string>
    <string name="add_vector_path">M15 ,15L3,15v2h12v-2zM15,7L3,7v2h12L15,7zM3,13h18v-2L3,11v2zM3,21h18v-2L3,19v2zM3,3v2h18L21,3L3,3z</string>
    <string name="search_hint">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_last_10_transactions">MY LAST 10 TRANSACTIONS</string>
    <string name="yyyy_mm_dd">yyyy-MM-dd</string>
    <string name="notification_channel_tracking">IPayment Tracking System</string>
    <string name="channel_tracking_id">IPaymentSafetySystemId</string>
    <string name="notification_tracking">Welcome to Ipayment Tracking System</string>
    <string name="ticker_text">Tick</string>
    <string name="tracking_close_alert">"   ATTENTION: IPayment needs to know your current location.!\n"</string>
    <string name="home_already_started_lifegift">IPayment Is Already Tracking Your Location!</string>
    <string name="title_activity_share">ShareActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="https_affiliateimage_s3_ap_south_1_amazonaws_com_product">https://affiliateimage.s3.ap-south-1.amazonaws.com/product/</string>
    <string name="https_affiliateimage_s3_ap_south_1_amazonaws_com_product_share_content">https://affiliateimage.s3.ap-south-1.amazonaws.com/product/share_content/</string>
    <string name="list_of_benefits_you_can_have">List of benefits you can have</string>
    <string name="benefit">Benefit</string>
    <string name="whom_to_sell">Whom to Sell</string>
    <string name="how_it_works">How it works ?</string>
    <string name="list_of_instruction_on_how_all_works">List of instruction on how all works</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="list_of_our_terms_and_conditions">List of our Terms and conditions</string>
    <string name="default_notification_channel_id">1</string>
    <string name="please_update_your_package_to_business_to_avail_existing_benefits">Please update your package to business to avail existing benefits.</string>
    <string name="cancel">Cancel</string>
    <string name="upgrade_to_business">Upgrade to Business</string>
    <string name="ok">OK</string>
    <string name="balance_inquiry">Balance Inquiry</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_aeps_operation">AepsOperationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>

    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <string name="balance_withdraw">Balance Withdraw</string>
    <string name="mini_statement">Mini Statement</string>
    <string name="add_bank">Add Bank</string>
</resources>
